revise something error

--- a/Lecture/computed_methods.html
+++ b/Lecture/computed_methods.html
@@ -10,8 +10,7 @@
             <button v-on:click="secondCounter++">Increase Second</button>
 
             <p>Counter : {{ counter }} | {{ secondCounter }}</p>
-
-]=            <p>Result : {{ result() }} | {{ output }}</p>
+            <p>Result : {{ result() }} | {{ output }}</p>
         <!-- div 태그를 보면 3개의 버튼이 있고, v-on 디렉티브를 통해 동작을 받아들인다.
         1, 2번 버튼은 counter 값을 변경시켜주고, 3번 버튼은 secondCounter의 값을 변경해준다.
         둘다 default 값은 0.
